# DustCast

./: LICENSE  README.md  nowcast.py  pyproject.toml
data/coords/: west-africa_lat.npy  west-africa_lon.npy
data/seviri_background/: SEVIRI_15dmean_cs_202406070000_west-africa.nc
data/seviri_sample_input/: 20240607-0000.npy  20240607-0015.npy  20240607-0030.npy  20240607-0045.npy  20240607-0100.npy  20240607-0115.npy  20240607-0130.npy  20240607-0145.npy  20240607-0200.npy  20240607-0215.npy  20240607-0230.npy  20240607-0245.npy  20240607-0300.npy  20240607-0315.npy  20240607-0330.npy  20240607-0345.npy  20240607-0400.npy  20240607-0415.npy  20240607-0430.npy  20240607-0445.npy  20240607-0500.npy  20240607-0515.npy  20240607-0530.npy  20240607-0545.npy  20240607-0600.npy  20240607-0615.npy  20240607-0630.npy  20240607-0645.npy  20240607-0700.npy  20240607-0715.npy  20240607-0730.npy  20240607-0745.npy  20240607-0800.npy  20240607-0815.npy  20240607-0830.npy  20240607-0845.npy  20240607-0900.npy  20240607-0915.npy  20240607-0930.npy  20240607-0945.npy  (+56 more)
dustcast/config/: eval.yaml  nowcast.yaml  train.yaml
dustcast/evaluation/: fss_det.py  fss_prob.py  io.py  mask.py  metrics.py  utils.py
dustcast/features/: DataModule.py  datasets.py  plot.py  rgb.py  utils.py
dustcast/model/: LightningDiffusion.py  setup.py  utils_ddpm.py
dustcast/model/losses/: SSIM.py
dustcast/scripts/: eval_compute_stats_nowcast.py  eval_compute_stats_persistence.py  eval_generate_nowcasts.py  eval_visualise_metrics.ipynb  train.py
dustcast/wandblog/: visualisation.py
